fixed green contrast

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ div {
 }
 .green {
     /* background color is the hex value for green */
-    background-color: #00D800;
+    background-color: #008500;
     /* text is aligned on the left side */
     text-align: left;
     /* a right margin of 50px */
